app/page.module.css
.pageContainer {
  position: relative;
  width: 100vw;
  height: 100vh;
}

.borderTop, .borderRight, .borderBottom, .borderLeft {
  position: absolute;
  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
}

.borderTop {
  top: 0;
  left: 0;
  right: 0;
  height: 30px;
  background-color: #5CCD60;
}

.borderRight {
  top: 0;
  right: 0;
  bottom: 0;
  width: 30px;
  background-color: #3A56B9;
}

.borderBottom {
  left: 0;
  right: 0;
  bottom: 0;
  height: 30px;
  background-color: #DDD272;
}

.borderLeft {
  top: 0;
  left: 0;
  bottom: 30px;
  width: 30px;
  background-color: #CD6060;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh; 
}

.title {
  font-size: 24px;
  margin-bottom: 20px;
}

.dropdownContainer {
  position: relative;
  width: 350px;
}

.inputContainer {
  display: flex;
  align-items: center;
  border-radius: 5px;
  border: 0.5px solid #ccc;
  padding: 5px;
}

.inputContainer:focus-within {
  border-color: orange;
}

.label {
  margin-right: 10px;
}

.input {
  flex-grow: 1;
  padding: 5px;
  font-size: 16px;
  border: none;
  outline: none;
}

.dropdown {
  position: absolute;
  top: calc(100%);
  left: 0;
  z-index: 10;
  border-top: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: calc(100%);
  background-color: aliceblue;
  overflow-y: auto;
  max-height: 200px;
  height: auto;
  scrollbar-gutter: stable both-edges;
}

.item {
  padding: 5px;
  cursor: pointer;
  margin-right: 10px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.item:hover {
  background-color: #FF7932;
  border-radius: 5px;
  color: white;
  
}

.icon {
  margin-left: 10px;
  cursor: pointer;
  width: 50px;
}

